fixing spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,9 +122,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2.4rem;
+  gap: 2.6rem;
   max-width: 38.4rem;
-  margin: 17.4rem 2.4rem 0;
+  margin: 17.4rem 4rem 0;
   padding: 4rem;
   background-color: var(--color-darkgrey);
   border-radius: 1.2rem;
@@ -135,6 +135,7 @@ body {
     max-width: 32.7rem;
     padding: 2.4rem;
     margin: 11.6rem 2.4rem 0;
+    gap: 2.4rem;
   }
 }
 .card-avatar {
